[package]
name = "netlink-wg"
version = "0.1.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
edition = "2018"
description = "API for netlink (with a focus on WireGuard interfaces)"
documentation = "https://docs.rs/netlink-wg"
repository = "https://github.com/manuels/netlink-wg"
license = "GPL-3.0"

[dependencies]
taikai = "0.1.0" # { path = "../taikai/rust/taikai" }
nom = "4.1.1"
byteorder = "1.2.7"
encoding_rs = "0.8.13"
log = "0.4.6"
tuple_utils = "0.3.0"
nix = "0.12.0"
libc = "0.2.46"
tokio = {version = "0.1", features = ["async-await-preview"]}
bytes = "0.4.11"
mio = "0.6.16"
futures = "0.1.25"
enum_primitive = "0.1.1"
pretty_assertions = "0.5.1"
